--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <title>{% block head_title %}  {% endblock %}</title>
   </head>
   <body>
-    {% include 'navbar.html' %}
+    {% comment %} {% include 'navbar.html' %} {% endcomment %}
     <div class="container-fluid">
       {% block content %} Content {% endblock %}
     </div>
