--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#ffffff">
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initiak-scale=1" />
+      <link rel="shortcut icon"type="image/png" sizes="32x32" href="static/img/apple-touch-icon.png">>
+      <meta name="msapplication-TileColor" content="#da532c">
+      <meta name="theme-color" content="#ffffff">
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initiak-scale=1" />
       <link
         rel="stylesheet"
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
