added login and signUp pages_start

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,9 @@
         href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         crossorigin="anonymous"
       />
-      <title>{% block title %}Base{% endblock %}</title>
+      <title>{% block title %} 
+        
+        {% endblock %}</title>
     </head>
     <body>
       <!-- Main menu code-->
