--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} 
 
-{%block head_title%}{{title}}{%endblock%} 
+{%block title %}{{title}}{%endblock%} 
 
 {%block content%}
 <p>More Content</p>
