--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         crossorigin="anonymous"
       />
       <title>{% block title %} 
-        
+
         {% endblock %}</title>
     </head>
     <body>
@@ -34,11 +34,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav ml-auto">
-              {% if User.is_authenticated %}
+              {% if user.is_authenticated %}
               <a class="nav-item nav-link ml-auto" id="home" href="/">Home</a>
               <a class="nav-item nav-link ml-auto" id="settings" href="/settings">Settings</a>
+              <a class="nav-item nav-link ml-auto" id="logout" href="{% url 'logout' %}">Logout</a>
               {% else %}
-              <a class="nav-item nav-link" id="login" href="/login">Login</a>
+              <a class="nav-item nav-link" id="login" href="{% url 'login' %}">Login</a>
               <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
               {% endif %}
           </div>  
