--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
-{%block title %}{{title}}{%endblock%} 
+{% block title %}Home{% endblock %}
 
-{%block content%}
-<p>More Content</p>
-{%endblock%}
+{% block content %}
+{% if user.is_authenticated %}
+  Hi {{ user.username }}!
+{% else %}
+  <p>You are not logged in</p>
+{% endif %}
+{% endblock %}
