--- a/templates/base.html
+++ b/templates/base.html
@@ -37,10 +37,9 @@
               {% if user.is_authenticated %}
               <a class="nav-item nav-link ml-auto" id="home" href="/">Home</a>
               <a class="nav-item nav-link ml-auto" id="settings" href="/settings">Settings</a>
-              <a class="nav-item nav-link ml-auto" id="logout" href="{% url 'logout' %}">Logout</a>
               {% else %}
               <a class="nav-item nav-link" id="login" href="{% url 'login' %}">Login</a>
-              <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+              <a class="nav-item nav-link" id="signUp" href="/accounts/signup">Sign Up</a>
               {% endif %}
           </div>  
         </div>   
