--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,7 +1,7 @@
 {% extends "base.html"%}<!-- Loads Base html file  -->
 {% block title %}GDScorecard{% endblock %} <!-- LAbels the browser window -->
 {% block content %} 
-<h1 align="center">{{ user.first_name }}</h1>
+<h1 align="center">{{ user.username }}</h1>
 <h4 align="left" >Settings</h4>
 <!-- Creates a list of blank score card templates  -->
 
@@ -20,7 +20,7 @@
 <form method="POST">
   <br/>
   <div align="right">
-   <a href="/editprofile" class="btn btn-primary btn-lg " 
+   <a href="/accounts/editprofile" class="btn btn-primary btn-lg " 
    tabindex="-1" role="button" aria-disabled="true">Profile Settings</a>
   </div>
   <br /> <br />
