--- a/templates/settings.html
+++ b/templates/settings.html
@@ -8,7 +8,7 @@
 <!-- End of Creates a list of blank score card templates  -->
 <br /><br /><br />
 <div align="right" >
-  <a href="/cardedit" class="btn btn-primary btn-lg " 
+  <a href="/create" class="btn btn-primary btn-lg " 
   tabindex="-1" role="button" aria-disabled="true">Edit Cards</a>
 </div>
 <br /> <br /> <br /> 
