--- a/templates/settings.html
+++ b/templates/settings.html
@@ -13,7 +13,7 @@
 </div>
 <br /> <br /> <br /> 
 <div align="right" >
-  <a href="/gameedit" class="btn btn-primary btn-lg " 
+  <a href="/deletecourse" class="btn btn-primary btn-lg " 
   tabindex="-1" role="button" aria-disabled="true">Delete Games</a>
 </div>
 <br /> <br /> <br />
