--- a/courses/templates/courses/form.html
+++ b/courses/templates/courses/form.html
@@ -21,6 +21,14 @@
         {{ form.holeSub }}
     </div>
     <div class="form-group">
+        <label> Basket </label>
+        {{ form.basket }}
+    </div>
+    <div class="form-group">
+        <label> Tee </label>
+        {{ form.tee }}
+    </div>
+    <div class="form-group">
         <label> Par</label>
         {{ form.par }}
     </div>
@@ -30,5 +38,9 @@
     </div>
     <button type="submit">Send</button>
 </form>
+<div align="right">
+    <a href="/" class="btn btn-primary btn-lg " 
+    tabindex="-1" role="button" aria-disabled="true">Back to Home</a>
+</div>
 
 {% endblock %}
