--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
 <div class='row'>
   <ul class="list-group list-group-flush" id="cards">
   {% for course in course_list %}
-      <li class="list-group-item"><h3>  {{course}}</h3></li>
+      <li class="list-group-item"><a href="/cards"><h3>  {{course}}</h3></a</li>
   {% endfor %}
 </ul>
 </div>
