--- a/templates/home.html
+++ b/templates/home.html
@@ -12,26 +12,26 @@
 <div class='row'>
   <ul class="list-group list-group-flush" id="cards">
   {% for course in course_list %}
-      <li class="list-group-item"><a href="/cards"><h3>  {{course}}</h3></a</li>
+      <li class="list-group-item"><h3>  {{course}}</h3></a</li>
   {% endfor %}
 </ul>
 </div>
 <!-- End of Creates a list of blank score card templates  -->
   <div align="right" >
-    <a href="/games" class="btn btn-primary btn-lg " 
+    <a href="/newgame" class="btn btn-primary btn-lg " 
     tabindex="-1" role="button" aria-disabled="true">View Games</a>
   </div>
   <br /><br /><br /><br /><br />
   {% comment %} {% if game == "false" and card == "true"%} {% endcomment %}
     <div align="right" >
-      <a href="/cards" class="btn btn-primary btn-lg " 
+      <a href="newgame/" class="btn btn-primary btn-lg " 
       tabindex="-1" role="button" aria-disabled="true">New Game</a>
     </div>
   {% comment %} {% endif %} {% endcomment %}
   {% comment %} {% if game == "false" and card == "false"%} {% endcomment %}
   <br /><br />
     <div align="right" >
-      <a href="/newcard" class="btn btn-primary btn-lg " 
+      <a href="/newgame" class="btn btn-primary btn-lg " 
       tabindex="-1" role="button" aria-disabled="true">Continue Game</a>
     </div>
   {% comment %} {% endif %}} {% endcomment %}
