park list and detail view added

--- a/courses/templates/courses/park-list.html
+++ b/courses/templates/courses/park-list.html
@@ -7,7 +7,7 @@
 <div class='row'>
   <ul class="list-group list-group-flush" id="cards">
   {% for course in course_list %}
-      <li class="list-group-item"><a href="/cards"><h3>  {{course}}</h3></a</li>
+      <li class="list-group-item"><a href="/park-detail/{{course}}"><h3>  {{course}}</h3></a</li>
   {% endfor %}
 </ul>
 </div>
