--- a/templates/settings.html
+++ b/templates/settings.html
@@ -8,6 +8,11 @@
 <!-- End of Creates a list of blank score card templates  -->
 <br /><br /><br />
 <div align="right" >
+  <a href="/newpark" class="btn btn-primary btn-lg " 
+  tabindex="-1" role="button" aria-disabled="true">Add Park</a>
+</div>
+<br /><br /><br />
+<div align="right" >
   <a href="/create" class="btn btn-primary btn-lg " 
   tabindex="-1" role="button" aria-disabled="true">Edit Cards</a>
 </div>
