--- a/templates/home.html
+++ b/templates/home.html
@@ -24,14 +24,14 @@
   <br /><br /><br /><br /><br />
   {% comment %} {% if game == "false" and card == "true"%} {% endcomment %}
     <div align="right" >
-      <a href="newgame/" class="btn btn-primary btn-lg " 
+      <a href="" class="btn btn-primary btn-lg " 
       tabindex="-1" role="button" aria-disabled="true">New Game</a>
     </div>
   {% comment %} {% endif %} {% endcomment %}
   {% comment %} {% if game == "false" and card == "false"%} {% endcomment %}
   <br /><br />
     <div align="right" >
-      <a href="/newgame" class="btn btn-primary btn-lg " 
+      <a href="" class="btn btn-primary btn-lg " 
       tabindex="-1" role="button" aria-disabled="true">Continue Game</a>
     </div>
   {% comment %} {% endif %}} {% endcomment %}
