--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link rel="shortcut icon"type="image/png" sizes="32x32" href="static/img/apple-touch-icon.png">
+      <link rel="shortcut icon"type="image/png" href="static/img/apple-touch-icon.png">
       <meta name="msapplication-TileColor" content="#da532c">
       <meta name="theme-color" content="#ffffff">
       <meta charset="utf-8" />
