--- a/courses/templates/courses/deletecourse.html
+++ b/courses/templates/courses/deletecourse.html
@@ -1,7 +1,7 @@
 {% extends "base.html"%}<!-- Loads Base html file -->
 {% block title %}Saved Games{% endblock %}<!-- Labels the browser window -->
 {% block content %} 
-<h4 align="left" >Delete Game</h4>
+<h4 class='text-light' align="left" >Delete Game</h4>
 <form method="POST">
   <!-- Creates a table of the selected game score card -->
  
