--- a/accounts/templates/accounts/editprofile.html
+++ b/accounts/templates/accounts/editprofile.html
@@ -2,8 +2,8 @@
 {% block title %}Edit Profile{% endblock %}
 {% block content %} 
 <form method="POST">
-    <h3 align ="center">Sign Up</h3>
-    <div class="form-group">
+    <h3 class='text-light' align ="center">Sign Up</h3>
+    <div class="form-group text-light">
         <label for="firstName">Username</label>
         <input 
             type="text" 
@@ -13,7 +13,7 @@
             placeholder={{ user.username }}
         />
     </div>
-    <div class="form-group">
+    <div class="form-group text-light">
         <label for="password1">New Password</label>
         <input 
             type="password" 
@@ -23,7 +23,7 @@
             placeholder="Enter New Password"
         />
     </div>
-    <div class="form-group">
+    <div class="form-group text-light">
         <label for="password1">New Password (Confirm)</label>
         <input 
             type="password" 
