--- a/courses/templates/courses/park-list.html
+++ b/courses/templates/courses/park-list.html
@@ -3,11 +3,11 @@
 
 {% block content %}
 <!-- Creates a list of Courses  -->
-<div class='row'><h2>Courses</h2></div>
+<div class='row text-light'><h2>Courses</h2></div>
 <div class='row'>
   <ul class="list-group list-group-flush" id="cards">
   {% for course in course_list %}
-      <li class="list-group-item"><a href="/park-detail/{{course}}"><h3>  {{course}}</h3></a</li>
+      <li class="list-group-item bg-secondary"><a href="/park-detail/{{course}}"><h3>  {{course}}</h3></a</li>
   {% endfor %}
 </ul>
 </div>
