--- a/courses/templates/courses/parkform.html
+++ b/courses/templates/courses/parkform.html
@@ -6,13 +6,13 @@
         <h1> {{title}} </h1>
     {%endif%}
 <form method="POST" action="." enctype='multipart/form-data'> {% csrf_token %}
-    <h1> Add Hole </h1>
+    <h1 class='text-light'> Add Park </h1>
     {% comment %} {{ form.as_p }} {% endcomment %}
-    <div class="form-group">
+    <div class="form-group text-light">
         <label> Park Name </label>
         {{ form.park_name }}
     </div>
-    <div class="form-group">
+    <div class="form-group text-light">
         <label> # of Holes </label>
         {{ form.num_holes }}
     </div>
@@ -20,8 +20,8 @@
     <button type="submit">Send</button>
 </form>
 <div align="right">
-    <a href="/" class="btn btn-primary btn-lg " 
-    tabindex="-1" role="button" aria-disabled="true">Back to Home</a>
+    <a href="/settings" class="btn btn-primary btn-lg " 
+    tabindex="-1" role="button" aria-disabled="true">Back to Settings</a>
 </div>
 
 {% endblock %}
