--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,8 +1,8 @@
 {% extends "base.html"%}<!-- Loads Base html file  -->
 {% block title %}GDScorecard{% endblock %} <!-- LAbels the browser window -->
 {% block content %} 
-<h1 align="center">{{ user.username }}</h1>
-<h4 align="left" >Settings</h4>
+<h1 align="center" class='text-light'>{{ user.username }}</h1>
+<h4 align="left" class='text-light' >Settings</h4>
 <!-- Creates a list of blank score card templates  -->
 
 <!-- End of Creates a list of blank score card templates  -->
