--- a/templates/home.html
+++ b/templates/home.html
@@ -8,11 +8,11 @@
   <h1 class='text-light'>Hi {{ user.username }} !</h1>
   {% comment %} Code here {% endcomment %}
   <!-- Creates a list of Courses  -->
-  <div class='row text-light'><h3>Recent Gamse</h3></div>
+  <div class='row text-light'><h3>Recent Games</h3></div>
 <div class='row'>
   <ul class="list-group list-group-flush" id="cards">
   {% for course in course_list %}
-      <li class="list-group-item bg-secondary text-light"><h3>  {{course.park_name}}</h3></a</li>
+      <li class="list-group-item bg-secondary text-light"><h3>  {{course}}</h3></a</li>
   {% endfor %}
 </ul>
 </div>
