--- a/templates/home.html
+++ b/templates/home.html
@@ -7,11 +7,11 @@
   {% if user.is_authenticated %}
     {% csrf_token %}
   <div class='row'>
-    <div class='col-md-4'>
-    <h1 class='text-light'>Hi {{ user.username }} !</h1>
+    <div class='col-md-6'>
+    <h1 class='text-light' align='left'>Hello {{user.username}}!</h1>
     {% comment %} Code here {% endcomment %}
     <!-- Creates a list of Courses  -->
-      <div class='row text-light'><h3>Recent Games</h3></div>
+      <div class='text-light'><h3>Recent Games</h3></div>
       <ul class="list-group list-group-flush" id="cards">
       {% for course in course_list %}
           <li class="badge badge-secondary text-light" style="width: 200px"><h3>  {{course}}</h3></li>
