--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
   {% if user.is_authenticated %}
     {% csrf_token %}
   <div class='row'>
-    <div class='col-md-4'>
+    <div class='col-xs-4'>
     <h1 class='text-light' align='left'>Hello {{user.username}}!</h1>
     {% comment %} Code here {% endcomment %}
     <!-- Creates a list of Courses  -->
@@ -20,24 +20,22 @@
       </ul>
     </div >
   <!-- End of Creates a list of blank score card templates  -->
-    <div class='col-md-4' align='right'>
+    <div class='col-xs-4' align='right'>
       <br /><br /><br /><br /><br />
       <div align="right" >
-        <a href="/park" class="btn btn-primary btn-lg " 
+        <a href="/park" class="btn btn-primary btn-md " 
         tabindex="-1" role="button" aria-disabled="true">View Parks</a>
       </div>
       <br /><br /><br /><br /><br />
       {% comment %} {% if game == "false" and card == "true"%} {% endcomment %}
       <div align="right" >
-        <a href="" class="btn btn-primary btn-lg " 
-        tabindex="-1" role="button" aria-disabled="true">New Game</a>
+        <a href="" class="btn btn-primary btn-md "  role="button" aria-disabled="true">New Game</a>
       </div>
       {% comment %} {% endif %} {% endcomment %}
       {% comment %} {% if game == "false" and card == "false"%} {% endcomment %}
       <br /><br />
       <div align="right" >
-        <a href="" class="btn btn-primary btn-lg " 
-        tabindex="-1" role="button" aria-disabled="true">Continue Game</a>
+        <a href="" class="btn btn-primary btn-md " role="button" aria-disabled="true">Continue Game</a>
       </div>
     </div>
 </div>
