--- a/courses/templates/courses/hole-edit.html
+++ b/courses/templates/courses/hole-edit.html
@@ -1,3 +1,4 @@
+
 {% extends "base.html" %}
 
 {% block content %}
@@ -6,10 +7,10 @@
         <h1> {{title}} </h1>
     {%endif%}
 <form method="POST" action="" enctype='multipart/form-data'> {% csrf_token %}
-    <h1 class='text-light'> Add Hole </h1>
+    <h1 class='text-light'> Edit Hole </h1>
     {% comment %} {{ form.as_p }} {% endcomment %}
     <div class="form-group text-light">
-        <label> Park Name: </label>
+        <label> Park Name </label>
         {{ form.parkName}}
     </div>
     <div class="form-group text-light">
