--- a/courses/templates/courses/park-list.html
+++ b/courses/templates/courses/park-list.html
@@ -5,7 +5,7 @@
 <!-- Creates a list of Courses  -->
 <div class='container'>
   <div class='row'>
-    <div class='col-md-6' align='left'>
+    <div class='col-xs-2 col-md-3' align='left'>
     <div class='text-light'><h2>Parks:</h2></div>
       <ul class="list-group list-group-flush"  id="parks">
       {% for course in course_list %}
@@ -14,12 +14,12 @@
       {% endfor %}
     </ul>
     </div>
-    <div class='col-md-6'>
+    <div class='col-xs-2 col-md-3'>
       {% comment %} todo something better than this {% endcomment %}
     </br></br></br></br></br></br></br></br></br>
       <div align="right">
-        <a href="/" class="btn btn-primary btn-lg " 
-        tabindex="-1" role="button" aria-disabled="true">Back to Home</a>
+        <a href="/" class="btn btn-primary btn-md " 
+        tabindex="-1" role="button" aria-disabled="true">Back</a>
       </div>
     </div>
   </div>
