--- a/templates/home.html
+++ b/templates/home.html
@@ -26,6 +26,11 @@
         <a href="/park" class="btn btn-primary btn-md " 
           role="button" aria-disabled="true">Parks</a>
       </div>
+      <br /><br />
+      <div align="right" >
+        <a href="/cards" class="btn btn-primary btn-md " 
+          role="button" aria-disabled="true">Cards</a>
+      </div>
       <br /><br /><br /><br /><br />
       {% comment %} {% if game == "false" and card == "true"%} {% endcomment %}
       <div align="right" >
