update scorecard ui

--- a/scorecards/templates/scorecards/card-detail.html
+++ b/scorecards/templates/scorecards/card-detail.html
@@ -10,16 +10,35 @@
         <div class='col-xs-3 col-md-5' align="left">
             <h5 class="list-group-item bg-secondary text-light" style="width: 300px">Card: {{name}}</h5>
             <h6 class="list-group-item bg-secondary text-light" style="width: 300px">Park: {{park}} </h6>
-            <ul class="list-group list-group-flush" id="cards">
+            {% comment %} <ul class="list-group list-group-flush" id="cards">
                 {% for c in course_list %}
                 <li class="list-group-item bg-secondary text-light" style="width: 200px">
                         <h5> Hole: {{c.holeNumber}}-{{c.holeSub}}</h5>
                         <h6> Tee: {{c.tee}} - basket: {{c.basket}}</h6>
-                        <h4> Par: {{c.par}}</h4>
                         <h6> Dist: {{c.distance}}</h6>
+                        <h6> Par: {{c.par}}</h6>
                     </li>
                 {% endfor %}
-            </ul>
+            </ul> {% endcomment %}
+            <table class="table table-bordered">
+                <thead>
+                    <tr>
+                    {% for c in course_list %}
+                    <th scope="row">{{c.holeNumber}}</th>
+                    {% endfor %}
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                {% for c in course_list %}
+                    <td scope="row">{{c.par}}</td>
+                {% endfor %}
+                </tr>
+                {% for c in course_list %}
+                    <td scope="row">{{c.distance}}</td>
+                {% endfor %}
+                </tbody>
+            </table>
         </div>
         <div class='col-xs-2 col-md-3' align="right">
             <a href="/create/{{name}}" type="button" class="btn btn-primary btn-md" 
