--- a/scorecards/templates/scorecards/card-detail.html
+++ b/scorecards/templates/scorecards/card-detail.html
@@ -23,22 +23,22 @@
             <table class="table table-bordered">
                 <thead>
                     <tr>
-                    <th scope="row">Hole # </th>
+                    <th class=" text-light" scope="row">Hole # </th>
                     {% for c in course_list %}
-                    <th scope="row">{{c.holeNumber}}</th>
+                    <th class=" text-light" scope="row">{{c.holeNumber}}</th>
                     {% endfor %}
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td scope="row">Par: </td>
+                    <td class=" text-light" scope="row">Par: </td>
                 {% for c in course_list %}
-                    <td scope="row">{{c.par}}</td>
+                    <td class=" text-light" scope="row">{{c.par}}</td>
                 {% endfor %}
                 </tr>
-                <td scope="row">Dist: </td>
+                <td class=" text-light" scope="row">Dist: </td>
                 {% for c in course_list %}
-                    <td scope="row">{{c.distance}}</td>
+                    <td class=" text-light" scope="row">{{c.distance}}</td>
                 {% endfor %}
                 </tbody>
             </table>
