new game view started

--- a/scorecards/templates/scorecards/card-detail.html
+++ b/scorecards/templates/scorecards/card-detail.html
@@ -94,7 +94,7 @@
         {%endif%}
         </div>
         <div class='col-xs-2 col-md-3' align="right">
-            <a href="/create/{{name}}" type="button" class="btn btn-primary btn-md" 
+            <a href="/card-edit/{{name}}/1" type="button" class="btn btn-primary btn-md" 
               aria-disabled="true">Add Hole</a>
         </br></br>
              <a href="/cards" class="btn btn-primary btn-md" 
