--- a/templates/home.html
+++ b/templates/home.html
@@ -34,7 +34,7 @@
       <br /><br /><br /><br /><br />
       {% comment %} {% if game == "false" and card == "true"%} {% endcomment %}
       <div align="right" >
-        <a href="" class="btn btn-primary btn-md "  role="button" aria-disabled="true">New</a>
+        <a href="/newgame" class="btn btn-primary btn-md "  role="button" aria-disabled="true">New</a>
       </div>
       {% comment %} {% endif %} {% endcomment %}
       {% comment %} {% if game == "false" and card == "false"%} {% endcomment %}
