par adjustment working

--- a/play_game/templates/play_game/new-game.html
+++ b/play_game/templates/play_game/new-game.html
@@ -32,19 +32,19 @@
   </div>
   <br /><br />
   <div>
-  <div align="left" class="row justify-content-md-center">
+  <div align="center" class="row justify-content-md-center">
     <div class="col col-md-2">
       <button class="btn btn-primary" name="NavHole" type="submit" value="dn">-</button>
     </div>
     <div>
-      <h5 class=" text-light" align="center">Throws: {{throws}}
+      <h5 class=" text-light" align="center">Throws: {{throws}} <> Avg: {{par}}
     </div>
-    <div align="right" class="col col-md-2">
+    <div align="center" class="col col-md-2">
       <button class="btn btn-primary" name="NavHole" type="submit" value="up">+</button>
     </div>
   </div>
   <br /><br /><br />
-  <div align="left" class="row justify-content-md-center">
+  <div align="center" class="row justify-content-md-center">
     <div class="col col-md-2">
       <h5 class=" text-light" align="left">Score: {{Score}}
     </div>
