--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
       {% comment %} {% if game == "false" and card == "false"%} {% endcomment %}
       <br /><br />
       <div align="right" >
-        <a href="" class="btn btn-primary btn-md " role="button" aria-disabled="true">Cont</a>
+        <a href="/newgame" class="btn btn-primary btn-md " role="button" aria-disabled="true">Cont</a>
       </div>
     </div>
   </div>
