--- a/templates/home.html
+++ b/templates/home.html
@@ -13,8 +13,11 @@
       <!-- Creates a list of Courses  -->
       <div class='text-light'><h3>Recent Games</h3></div>
       <ul class="list-group list-group-flush" id="cards">
-        {% for course in course_list %}
-            <li class="badge badge-secondary text-light" align='left' style="width: 150px"><h5>{{course}}</h5></li>
+        {% for game in games_list %}
+            <li class="badge badge-secondary text-light" align='left' style="width: 150px">
+              <a href="/save-game/{{game}}">
+              <h5>{{game}}</h5>
+            </li>
             </br>
         {% endfor %}
       </ul>
