--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
       <h1 class='text-light' align='left'>Hello {{user.username}}!</h1>
       {% comment %} Code here {% endcomment %}
       <!-- Creates a list of Courses  -->
-      <div class='text-light'><h3>Recent Games</h3></div>
+      <div class='text-light'><h3>Recent Games:</h3></div>
       <ul class="list-group list-group-flush" id="cards">
         {% for game in games_list %}
             <li class="badge badge-secondary text-light" align='left' style="width: 150px">
