--- a/play_game/templates/play_game/game-save.html
+++ b/play_game/templates/play_game/game-save.html
@@ -128,7 +128,7 @@
                 </tbody>
             </table>
         {%endif%}
-        <div class=' text-light' align='right'>Total Score: {{tScore}}</div>
+        <div class=' text-light' align='left'>Total Score: {{tScore}}</div>
         </div>
         <div class='col-xs-2 col-md-3' align="right">
             <a href="" type="button" class="btn btn-primary btn-md" 
